fix mockups alignment -> this layout is fucked

--- a/css/layout.css
+++ b/css/layout.css
@@ -762,7 +762,7 @@ Perso salesfetch landing
 	height: 100%;
 	position: absolute;
 	top: 0;
-	left: 2px;
+	left: 1px;
 }
 
 /* Chrome, Safari, Opera */
